[package]
name = "blobserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.117", features = ["derive"] }
serde_json = "1.0.59"
r2d2 = "*"
r2d2_sqlite = "*"
rusqlite = { version = "0.24.2", features = ["bundled", "blob", "serde_json"] }
serde_rusqlite = "*"
hyper = { version = "0.14", features = ["full"] }
multer = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
mime_guess = "2.0.4"